Tab 5: Fix None error with |tojson

--- a/app/templates/tab5.html
+++ b/app/templates/tab5.html
@@ -124,7 +124,7 @@
 </div>
 
 <script>
-const itemMap = {{ item_map_json|safe }};
+const itemMap = {{ item_map_json|tojson }};
 console.log("Loaded itemMap:", itemMap);
 
 function sortTable(tableEl, colName) {
